fix logo align

--- a/frontend/src/components/navbar/NavBar.module.css
+++ b/frontend/src/components/navbar/NavBar.module.css
@@ -42,10 +42,21 @@
 {
     justify-items: center;
     align-items: center;
+    padding-right: 0.5rem;
 }
 
-.logoText
+.logoTextContainer
 {
-    font-size: 2rem;
-    font-family: var(--title-font-family);
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+
+    p
+    {
+        padding: 0;
+        margin: 0;
+        font-size: 1rem;
+        font-family: var(--title-font-family);
+    }
 }
